# tfg

chat_pkg/: package.xml  setup.py
chat_pkg/chat_pkg/: asr_node.py  asr_node_st.py  asr_sp_node.py  chat_node.py  interface_node.py  poses_mng.py  social_patrol.py  social_patrol_lc.py  test_1.py  test_2.py  test_3.py  test_keyword.py  test_sub_key.py  tts_node.py  whisper_node.py
chat_pkg/launch/: chat_launch.launch.py  main.launch.py  main_demo.launch.py  main_simu.launch.py
interaction_pkg/: package.xml  setup.py
interaction_pkg/config/: interaction.yaml
interaction_pkg/interaction_pkg/: asr_node.py  chat_node.py  interface_node.py  social_patrol.py  tts_node.py
interaction_pkg/launch/: chat_launch.launch.py  main.launch.py  main_demo.launch.py  main_simu.launch.py
patrol/: CMakeLists.txt  package.xml  readme.md
patrol/action/: PatrolTimes.action
patrol/include/patrol/: patrol_node.hpp
patrol/launch/: patrol_launch.py  patrol_params.yaml
patrol/src/: patrol_node.cpp
